tests/baselines/reference/invalidTryStatements2.errors.txt
==== tests/cases/conformance/statements/tryStatements/invalidTryStatements2.ts (2 errors) ====
    function fn() {
        try {
        } catch { // syntax error, missing '(x)'
                ~
!!! '(' expected.
        }
    
        catch(x) { } // error missing try
        ~~~~~
!!! A 'catch' clause must be preceded by a 'try' statement.
    
        finally{ } // error missing try
    }